# adress-api-france-sdk

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  SECURITY.md
.sdk/: package-lock.json  package.json
.sdk/def/: adress-api-france_0.1.0.json
.sdk/model/: sdk.aontu  sdk.json  sdk.jsonic
go/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  adress-api-france.go  go.mod
go-cli/: .gitignore  Makefile  README.md  go.mod  main.go  words.go
go-mcp/: .gitignore  Makefile  README.md  go.mod  main.go  tools.go
go/core/: adress-api-france_sdk.go  config.go  context.go  error.go  operation.go  registry.go  response.go  result.go  target.go  types.go
go/entity/: batch_geocoding_entity.go  geocoding_entity.go  types.go
go/feature/: audit_feature.go  base_feature.go  cache_feature.go  clienttrack_feature.go  debug_feature.go  idempotency_feature.go  log_feature.go  metrics_feature.go  (+10 more)
lua/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  adress-api-france.rockspec  adress-api-france_sdk.lua  adress-api-france_types.lua  config.lua  features.lua
php/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  adressapifrance_sdk.php  composer.json  config.php  features.php
py/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  adressapifrance_sdk.py  adressapifrance_types.py  config.py  features.py  pyproject.toml
py/core/: context.py  error.py  helpers.py  response.py  spec.py
py/entity/: batch_geocoding_entity.py  geocoding_entity.py
py/feature/: audit_feature.py  base_feature.py  cache_feature.py  log_feature.py  ratelimit_feature.py  rbac_feature.py  test_feature.py
py/test/: feature_harness.py  runner.py  test_batch_geocoding_entity.py  test_exists.py  test_feature.py  test_geocoding_direct.py  test_geocoding_entity.py  test_netsim.py  test_pipeline.py  test_primary_utility.py  test_readme_examples.py
py/utility/: clean.py  done.py  feature_add.py  feature_hook.py  feature_init.py  fetcher.py  make_context.py  make_error.py  make_fetch_def.py  make_options.py  make_point.py  make_response.py  make_result.py  make_spec.py  make_url.py  param.py  prepare_body.py  prepare_headers.py  prepare_method.py  prepare_query.py  register.py  result_body.py  transform_request.py
rb/: AGENTS.md  AdressApiFrance_sdk.gemspec  AdressApiFrance_sdk.rb  AdressApiFrance_types.rb  CLAUDE.md  README.md  REFERENCE.md  config.rb  features.rb
ts/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  package-lock.json  package.json
(+373 files in other folders)
